--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,10 @@ packages = [{ include = "quickapi" }]
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
 httpx = "^0.27.0"
+chili = "^2.8.4"
 requests = { version = "^2.31.0", optional = true }
-attrs = "^23.2.0"
-cattrs = "^23.2.3"
+attrs = { version = "^23.2.0", optional = true }
+cattrs = { version = "^23.2.3", optional = true }
 pydantic = { version = "^2.6.4", optional = true }
 
 [tool.poetry.group.dev.dependencies]
@@ -28,6 +29,8 @@ httpx-auth = "^0.22.0"
 responses = "^0.25.0"
 types-requests = "^2.31.0.20240311"
 pydantic = "^2.6.4"
+attrs = "^23.2.0"
+cattrs = "^23.2.3"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.4.2"
