--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ requests = { version = "^2.31.0", optional = true }
 attrs = { version = "^23.2.0", optional = true }
 cattrs = { version = "^23.2.3", optional = true }
 pydantic = { version = "^2.6.4", optional = true }
+msgspec = { version = "^0.18.6", optional = true }
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
