--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ types-requests = "^2.31.0.20240311"
 pydantic = "^2.6.4"
 attrs = "^23.2.0"
 cattrs = "^23.2.3"
+msgspec = "^0.18.6"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.6.0"
