--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
 skipsdist = true
-envlist = py310, py311
+envlist = py310, py311, py312
 
 [gh-actions]
 python =
     3.10: py310
     3.11: py311
+    3.12: py312
 
 [testenv]
 passenv = PYTHON_VERSION
