--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ packages = [{ include = "quickapi" }]
 python = ">=3.10,<4.0"
 httpx = "^0.27.0"
 chili = "^2.8.4"
+aiohttp = { version = "^3.10.8", optional = true }
 requests = { version = "^2.31.0", optional = true }
 attrs = { version = "^23.2.0", optional = true }
 cattrs = { version = "^23.2.3", optional = true }
@@ -33,6 +34,7 @@ pydantic = "^2.6.4"
 attrs = "^23.2.0"
 cattrs = "^23.2.3"
 msgspec = "^0.18.6"
+aiohttp = "^3.10.8"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.6.0"
@@ -45,6 +47,7 @@ requests = ["requests"]
 attrs = ["attrs", "cattrs"]
 pydantic = ["pydantic"]
 msgspec = ["msgspec"]
+aiohttp = ["aiohttp"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
