--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ attrs = { version = "^23.2.0", optional = true }
 cattrs = { version = "^23.2.3", optional = true }
 pydantic = { version = "^2.6.4", optional = true }
 msgspec = { version = "^0.18.6", optional = true }
+typing-extensions = { version = "^4", python = "<3.11" }
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
